fix: file names

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div class="content">
       <p class="text" id="test">This is a test text</p>
     </div>
-    <script src="./remove_string_spaces.js"></script>
+    <script src="./8_remove_string_spaces.js"></script>
   </body>
 </html>
