--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
       <p class="text" id="test">This is a test text</p>
     </div>
     <script src="./8_remove_string_spaces.js"></script>
+    <script src="./8_numbers_between_ab.js"></script>
+    <script src="./8_remove_numbers_from_string.js"></script>
+    <script src="./8_sum_of_multiples.js"></script>
+    <script src="./8_sum_of_arr_values.js"></script>
   </body>
 </html>
