--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
     <script src="./8_remove_numbers_from_string.js"></script>
     <script src="./8_sum_of_multiples.js"></script>
     <script src="./8_sum_of_arr_values.js"></script>
+    <script src="./8_count_of_pos_sum_of_neg.js"></script>
+    <script src="./7_square_digits.js"></script>
+    <script src="./7_Highest and Lowest.js"></script>
+    <script src="./7_Get the middle character.js"></script>
+    <script src="./7_if its a square number.js"></script>
+    <script src="./7_XO.js"></script>
+    <script src="./7_Capitalize_firs_letters.js"></script>
+    <script src="./7_shortest_word.js"></script>
   </body>
 </html>
