--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script src="./8_sum_of_multiples.js"></script>
     <script src="./8_sum_of_arr_values.js"></script>
     <script src="./8_count_of_pos_sum_of_neg.js"></script>
+    <script src="./8_how_good are u really.js"></script>
+    <script src="./8_squareornottosquare.js"></script>
     <script src="./7_square_digits.js"></script>
     <script src="./7_Highest and Lowest.js"></script>
     <script src="./7_Get the middle character.js"></script>
@@ -24,5 +26,13 @@
     <script src="./7_XO.js"></script>
     <script src="./7_Capitalize_firs_letters.js"></script>
     <script src="./7_shortest_word.js"></script>
+    <script src="./6_multiples_of_3 and 5.js"></script>
+    <script src="./6_find_the_odd_int.js"></script>
+    <script src="./6_reverse_long_words.js"></script>
+    <script src="./6_bit_counting.js"></script>
+    <script src="./6_digitel_root.js"></script>
+    <script src="./6_Find The Parity Outlier.js"></script>
+    <script src="./6_persistance.js"></script>
+    <script src="./5_Simple Pig Latin.js"></script>
   </body>
 </html>
