--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <script src="./7_XO.js"></script>
     <script src="./7_Capitalize_firs_letters.js"></script>
     <script src="./7_shortest_word.js"></script>
+    <script src="./7_isograms.js"></script>
+    <script src="./7_sumof2lowest.js"></script>
+    <script src="./7_maskify_creditcard.js"></script>
+    <script src="./7_sum-of-nums-between2.js"></script>
+    <script src="./6_array-diff.js"></script>
     <script src="./6_multiples_of_3 and 5.js"></script>
     <script src="./6_find_the_odd_int.js"></script>
     <script src="./6_reverse_long_words.js"></script>
