--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <script src="./6_digitel_root.js"></script>
     <script src="./6_Find The Parity Outlier.js"></script>
     <script src="./6_persistance.js"></script>
+    <script src="./6_replaceCharWithAlphabetNum.js"></script>
+    <script src="./6_ur-order-pls.js"></script>
     <script src="./5_Simple Pig Latin.js"></script>
   </body>
 </html>
